--- a/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
+++ b/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
@@ -4,10 +4,16 @@
             <lightning-card icon-name="standard:case" title="Crear Caso">
                 <lightning-layout vertical-align="stretch" multiple-rows="true">
                     <lightning-layout-item padding="around-small" size="6">
+                        <lightning-combobox name="tipoRegistro" label="Seleccione el Tipo de Caso"
+                            options={data.listTiporegistro} value={data.registroSeleccionado} onchange={onchangeFilter} type="radio">
+                        </lightning-combobox>
+                    </lightning-layout-item>
+                    <lightning-layout-item padding="around-small" size="6">
                         <lightning-combobox name="producto" label="Seleccione un Producto"
                             value={data.productoSeleccionado} options={data.listProductos} onchange={onchangeFilter}
                             placeholder="Seleccione un Producto"></lightning-combobox>
                     </lightning-layout-item>
+
                     <lightning-layout-item padding="around-small" size="6">
                         <lightning-combobox name="modulo" label="Seleccione un Módulo" value={data.moduloSeleccionado}
                             options={data.listModulos} onchange={onchangeFilter} placeholder="Seleccione un Módulo">
@@ -18,6 +24,20 @@
                             value={data.subModuloSeleccionado} options={data.listSubModulos} onchange={onchangeFilter}
                             placeholder="Seleccione un Sub Módulo"></lightning-combobox>
                     </lightning-layout-item>
+
+                    <lightning-layout-item padding="around-small" size="6">
+                        <lightning-combobox name="motivo" label="Seleccione un Motivo"
+                            value={data.motivoSeleccionado} options={data.listMotivo} onchange={onchangeFilter}
+                            placeholder="Seleccione un Sub Módulo"></lightning-combobox>
+                    </lightning-layout-item>
+                    <lightning-layout-item padding="around-small" size="6">
+                        <lightning-input type="text" label="Asunto de Caso" name="asunto" onchange={onchangeFilter} value={data.asunto} ></lightning-input>
+                    </lightning-layout-item> 
+
+                    <lightning-layout-item padding="around-small"  size="12" >
+                        <lightning-input-rich-text  value={data.descripcion} onchange={onchangeFilter} name="descripcion" label="Descripción" title="Descripción" ></lightning-input-rich-text>
+                    </lightning-layout-item>
+
                     <lightning-layout-item padding="around-small"  size="10" >
                     </lightning-layout-item>
                     <lightning-layout-item padding="around-small"  size="2" >
@@ -28,20 +48,26 @@
             </lightning-card>
         </lightning-layout-item>
     </lightning-layout>
-    <template if:true={data.popTipoRegistro}>
+    <template if:true={data.popArchivo}>
         <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
             aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
             <div class="slds-modal__container">
                 <header class="slds-modal__header">
-                    <h1 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">Nuevo Caso</h1>
+                    <h1 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">Adjuntar Archivo</h1>
                 </header>
                 <div class="slds-modal__content slds-p-around_medium ">
                     <div class="slds-form slds-form_compound slds-align--absolute-left">
                         <fieldset class="slds-form-element">
                             <div class="slds-modal__content slds-p-around--medium">
-                                <lightning-radio-group name="tipoRegistro" label="Seleccione el tipo de Caso"
-                                    options={data.listTiporegistro} value={data.registroSeleccionado} onchange={onchangeFilter} type="radio">
-                                </lightning-radio-group>
+                                <lightning-file-upload
+                                    label="Subir Archivo"
+                                    name="subirArchivo"
+                                    accept={acceptedFormats}
+                                    record-id={myRecordId}
+                                    onuploadfinished={handleUploadFinished}
+                                    multiple
+                                >
+                                </lightning-file-upload>
                             </div>
                             <footer class="slds-modal__footer">
                                 <lightning-button label="Cancelar" title="Cancelar" onclick={cancelar} class="slds-m-left_x-small"></lightning-button>
