--- a/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
+++ b/force-app/main/default/lwc/fs_CampoPendienteCaso/fs_CampoPendienteCaso.html
@@ -5,26 +5,12 @@
                 <lightning-card icon-name="standard:answer_best" title="Aceptación de Respuesta">
                     <lightning-layout vertical-align="stretch" multiple-rows="true">
                         <lightning-layout-item flexibility="auto" padding="around-small" size="6">
-                            <lightning-combobox name="aceptaResp" label="Acepta Respuesta"
-                                value={data.caso.FS_AceptaRespuesta__c} options={data.listAceptaRespuesta}
-                                onchange={handleChange} placeholder="Seleccione una respuesta">
-                            </lightning-combobox>
+                            <h1>Tienes pendiente la Aceptación de Respuesta</h1>
                         </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="6" if:true={data.mostrarRechazo} >
-                            <lightning-combobox name="motivoRechazo" label="Motivo Rechazo"
-                            value={data.caso.FS_MotivoRechazo__c} options={data.listMotivosRechazo}
-                            onchange={handleChange} placeholder="Seleccione una Motivo">
-                        </lightning-combobox>
-                        </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="12">
-                            <lightning-textarea name="comentarioResp" label="Comentarios" vaue={data.caso.FS_ComentariosRespuesta__c}
-                            onchange={handleChange}></lightning-textarea>
-                        </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="10" >
-                        </lightning-layout-item>
-                        <lightning-layout-item flexibility="auto" padding="around-small" size="2">
-                            <lightning-button label="Guardar" title="Guardar" variant="brand" name="guardar"
-                                class="slds-m-left_x-small" onclick={guardarCaso}></lightning-button>
+                        <lightning-layout-item flexibility="auto" padding="around-small" size="6">
+                            <br />
+                            <lightning-button label="Contestar" title="Contestar" variant="brand" name="contestar"
+                                class="slds-m-left_x-small" onclick={popRespuesta}></lightning-button>
                         </lightning-layout-item>
                     </lightning-layout>
                 </lightning-card>
