--- a/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
+++ b/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
@@ -38,7 +38,13 @@
                         <lightning-input-rich-text  value={data.descripcion} onchange={onchangeFilter} name="descripcion" label="Descripción" title="Descripción" ></lightning-input-rich-text>
                     </lightning-layout-item>
 
-                    <lightning-layout-item padding="around-small"  size="10" >
+                        <lightning-layout-item padding="around-small"  size="10" >
+                            <lightning-file-upload  label="Subir Archivo"  name="subirArchivo" record-id={data.contactId}
+                            onuploadfinished={finalizaCargaArchivo} multiple >
+                        </lightning-file-upload>
+                        <template for:each={data.listArchivos} for:item="arch">
+                            <p key={arch.value}>{arch.label}</p>
+                        </template>
                     </lightning-layout-item>
                     <lightning-layout-item padding="around-small"  size="2" >
                         <lightning-button label="Crear Caso"  style="width: 100%;" title="Crear Caso" variant="brand" name="crearCaso"
@@ -48,39 +54,6 @@
             </lightning-card>
         </lightning-layout-item>
     </lightning-layout>
-    <template if:true={data.popArchivo}>
-        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
-            aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
-            <div class="slds-modal__container">
-                <header class="slds-modal__header">
-                    <h1 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">Adjuntar Archivo</h1>
-                </header>
-                <div class="slds-modal__content slds-p-around_medium ">
-                    <div class="slds-form slds-form_compound slds-align--absolute-left">
-                        <fieldset class="slds-form-element">
-                            <div class="slds-modal__content slds-p-around--medium">
-                                <lightning-file-upload
-                                    label="Subir Archivo"
-                                    name="subirArchivo"
-                                    accept={acceptedFormats}
-                                    record-id={myRecordId}
-                                    onuploadfinished={handleUploadFinished}
-                                    multiple
-                                >
-                                </lightning-file-upload>
-                            </div>
-                            <footer class="slds-modal__footer">
-                                <lightning-button label="Cancelar" title="Cancelar" onclick={cancelar} class="slds-m-left_x-small"></lightning-button>
-                                <lightning-button label="Siguiente" title="Siguiente" variant="brand" name="siguiente" class="slds-m-left_x-small"
-                                onclick={crearCaso} disabled={data.desabilitarSiguiente} ></lightning-button>
-                            </footer>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="slds-backdrop slds-backdrop_open"></div>
-    </template>
     <template if:true={showSpinner}>
         <div id="activityIndicator" class="slds-spinner_container">
             <div class="slds-spinner--brand slds-spinner slds-spinner--large" role="alert">
