--- a/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
+++ b/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
@@ -19,11 +19,11 @@
                             options={data.listModulos} onchange={onchangeFilter} placeholder="Seleccione un Módulo">
                         </lightning-combobox>
                     </lightning-layout-item>
-                    <lightning-layout-item padding="around-small" size="6">
+                    <!--lightning-layout-item padding="around-small" size="6">
                         <lightning-combobox name="subModulo" label="Seleccione un Sub Módulo"
                             value={data.subModuloSeleccionado} options={data.listSubModulos} onchange={onchangeFilter}
                             placeholder="Seleccione un Sub Módulo"></lightning-combobox>
-                    </lightning-layout-item>
+                    </lightning-layout-item-->
 
                     <lightning-layout-item padding="around-small" size="6">
                         <lightning-combobox name="motivo" label="Seleccione un Motivo"
