--- a/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
+++ b/force-app/main/default/lwc/fs_CrearCaso/fs_CrearCaso.html
@@ -28,7 +28,7 @@
                     <lightning-layout-item padding="around-small" size="6">
                         <lightning-combobox name="motivo" label="Seleccione un Motivo"
                             value={data.motivoSeleccionado} options={data.listMotivo} onchange={onchangeFilter}
-                            placeholder="Seleccione un Sub Módulo"></lightning-combobox>
+                            placeholder="Seleccione un Motivo"></lightning-combobox>
                     </lightning-layout-item>
                     <lightning-layout-item padding="around-small" size="6">
                         <lightning-input type="text" label="Asunto de Caso" name="asunto" onchange={onchangeFilter} value={data.asunto} ></lightning-input>
